<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--  Remake Video Buttons  -->
    <string name="icon_heart_like">{fa-heart-o} Like</string>
    <string name="icon_heart_unlike">{fa-heart} Unlike</string>
    <string name="icon_share">{fa_share_alt}</string>
    <string name="icon_report">{fa_flag}</string>
    <string name="icon_views">{fa_eye}</string>
    <string name="icon_likes">{fa-heart-o}</string>
    <string name="icon_play">{fa_play}</string>
    <string name="icon_pause">{fa_pause}</string>
    <string name="icon_stop">{fa_stop}</string>
    <string name="icon_full_screen">{fa_expand}</string>
    <string name="icon_more">{fa-ellipsis-h}</string>
    <string name="icon_more_v">{fa-ellipsis-v}</string>

    <string name="more_remakes">MORE REMAKES</string>
    <string name="show_remake">REMAKE</string>

    <string name="app_name">Homage</string>
    <string name="app_main_title">Homage</string>


    <string name="test">TEST!</string>
    <string name="placeholder_title">PLACE HOLDER!</string>

    <!-- Facebook -->
    <string name="app_id">447743458659084</string>

    <!-- Sharing Remake -->
    <string name="send_to">Share Remake To...</string>
    <string name="share_your_story">Share your clip</string>
    <string name="share_link_or_video">Share link or video?</string>
    <string name="share_link">Link</string>
    <string name="share_video">Video</string>

    <!-- List messages -->
    <string name="no_remakes">CREATE YOUR FIRST CLIP!</string>
    <string name="checking_for_remakes">CHECKING FOR REMAKES...</string>

    <!-- Buttons and overlay messages -->
    <string name="button_retake_last_scene">RETAKE LAST SCENE</string>
    <string name="button_can_i_see_a_preview">CAN I SEE A PREVIEW?</string>
    <string name="button_scene_direction">SCENE DIRECTION</string>
    <string name="button_show_script">SHOW SCRIPT</string>
    <string name="button_hide_script">HIDE SCRIPT</string>
    <string name="make_your_own">MAKE YOUR OWN</string>

    <string name="button_shoot_scene">Shoot Scene!</string>
    <string name="title_scene_number">Scene&#xA0;No.&#xA0;%d</string>
    <string name="short_scene_number">Scene&#xA0;%d</string>
    <string name="at_the_next_scene_text">At the next scene %s</string>

    <string name="title_retake_are_you_sure">ARE YOU SURE YOU WANT TO RETAKE THIS SCENE?</string>
    <string name="button_oops_nope">OOPS..NOPE</string>
    <string name="button_yeah_start_rolling">YEAH, START ROLLING</string>

    <string name="title_great_job">GREAT JOB!</string>
    <string name="title_improper_background">IMPROPER BACKGROUND</string>
    <string name="title_improper_msg">For optimal results, use a solid color wall</string>

    <string name="title_got_push_message">MOVIE READY!</string>
    <string name="title_got_push_message_msg">Go to My Clips screen to watch your result</string>

    <string name="title_got_push_message_failed">MOVIE FAILED..</string>
    <string name="title_got_push_message_msg_failed">Go to My Clips screen to recreate it</string>

    <string name="title_sent_movie_for_render">PREPARING MOVIE!</string>
    <string name="title_sent_movie_for_render_msg">We will notify you as soon as the movie is ready. Feel free to make more awesome clips!</string>

    <string name="back_camera_title">Back Camera</string>
    <string name="front_camera_title">Selfie</string>

    <string name="recording_started">Recording started.</string>
    <string name="recording_canceled">Canceled recording.</string>
    <string name="recording_failed">Recording failed.</string>
    <string name="recording_failed_to_start">Recording failed to start.</string>
    <string name="recording_scene_recorded_successfully">Scene recorded successfully</string>

    <!-- My Stories -->
    <string name="remake_a_story_button">CREATE MORE CLIPS!</string>
    <string name="rendering_remake_message">Preparing...</string>

    <!-- Videos -->
    <string name="video_title_scene">WATCH OUR SCENE</string>
    <string name="video_title_story">WATCH OUR CLIP</string>

    <!-- Dialogues -->
    <string name="recorder_dismiss_title">Leave recorder</string>
    <string name="recorder_dismiss_message">This will close the recorder.\nAre you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="report_abusive_remake_title">Report As Inappropriate</string>

    <string name="join_us_title">Join us!</string>
    <string name="publish_signed_in_only">Only signed in users can publish remakes. Please sign in to continue</string>
    <string name="share_signed_in_only">Only signed in users can share remakes. Please sign in to continue</string>
    <string name="ok_got_it">OK, Got it</string>


    <string name="continue_remake_title">Continue Remake</string>
    <string name="continue_remake_message">Continue from the last saved point, or start from scratch?</string>

    <!-- Progress dialogues -->
    <string name="pd_title_please_wait">Please wait.</string>
    <string name="pd_msg_creating_movie">Creating Movie...</string>
    <string name="pd_msg_starting_recorder">Starting Recorder...</string>
    <string name="pd_msg_sharing_movie">Preparing first time share of this movie</string>

    <string name="pd_title_delete_remake_question">Delete remake.</string>
    <string name="pd_msg_delete_remake_question">Would you like to delete this remake?</string>
    <string name="pd_msg_deleting_remake">Deleting remake...</string>

    <string name="pd_msg_render">Sending movie to be rendered.</string>

    <!-- Welcome screen -->
    <string name="welcome_1">1</string>
    <string name="welcome_1_message">MAKE SURE THE ACTOR IS IN THE FIGURE BEFORE RECORDING</string>
    <string name="welcome_2">2</string>
    <string name="welcome_2_message">USE A SOLID COLOR WALL AS BACKGROUND</string>

    <!-- Navigation drawer -->
    <string name="nav_item_1_stories">CLIPS</string>
    <string name="nav_item_2_me">MY CLIPS</string>
    <string name="nav_item_3_settings">SETTINGS</string>
    <string name="nav_item_4_howto">HOW TO</string>
    <string name="nav_item_5_share_app">SHARE APP</string>
    <string name="nav_item_6_storydetails">CLIP DETAILS</string>
    <string name="nav_title_hello_user">Hello Guest</string>
    <string name="nav_join_button">join now</string>

    <!-- Action buttons -->
    <string name="action_button_lets_shot">LETS SHOOT!</string>
    <string name="action_button_lets_create">LETS CREATE</string>
    <string name="action_button_ok">Ok, got it</string>
    <string name="action_button_dont_show_again">Don\'t show this again</string>

    <!-- Rendering -->
    <string name="rendering_progress_preparing">Preparing your movie: %s</string>
    <string name="rendering_progress_ready">Your movie is ready! Click to watch</string>
    <string name="rendering_progress_failed">Your movie creation Failed. Click to dismiss.</string>


    <!-- Login screen -->
    <string name="login_disclaimer_first_row">By signing in or entering as a Guest you agree to our</string>
    <string name="login_tos_button">Terms of service</string>
    <string name="login_privacy_button">Privacy policy</string>
    <string name="login_action_button">SIGN IN</string>
    <string name="login_cancel_button">cancel</string>
    <string name="login_guest_button">Guest</string>

    <string name="login_error_email_format">incorrect email format</string>
    <string name="login_error_password_format">password must be at least 6 characters long</string>

    <string name="login_pd_title">Please wait...</string>
    <string name="login_pd_signing_in">Signing in user...</string>
    <string name="login_pd_signing_in_guest">Signing in as guest...</string>
    <string name="login_pd_signing_in_guest_no_login_screen">Just a few more seconds</string>

    <!-- Login error messages -->
    <string name="login_error_authorization_failed">Authorization failed.</string>
    <string name="login_error_incorrect_password">Incorrect password.</string>
    <string name="login_error_existing_fb_user">FB user already exists.</string>
    <string name="login_error_unknown">Login failed.</string>
    <string name="login_error_server_unreachable">Network error: Server unreachable.</string>


    <!-- Text reader -->
    <string name="text_title_privacy">Privacy policy</string>
    <string name="text_title_tos">Terms of service</string>

    <!-- Settings -->
    <string name="settings_title">SETTINGS</string>

    <string name="settings_category_developer">Developer</string>
    <string name="settings_category_privacy">Privacy</string>
    <string name="settings_category_options">Options</string>
    <string name="settings_category_support">Support</string>

    <string name="settings_uploader_title">Uploader</string>
    <string name="settings_uploader_summary">Turn off/on uploader.</string>

    <string name="settings_skip_story_details_title">Skip Clip Details</string>
    <string name="settings_skip_story_details_summary">Skip the clip details screen and immediately open the recorder when selecting a clip.</string>

    <string name="settings_export_db_title">Export model db.</string>

    <string name="settings_remakes_are_public_title">Remakes are public</string>
    <string name="settings_options_warning_title">No Bad Background Warning</string>
    <string name="settings_remakes_are_public_summary">Share your remakes with others.</string>
    <string name="settings_options_warning_summary">Don\'t get warned when shooting on a bad background</string>

    <string name="settings_feedback_title">Feedback us</string>
    <string name="settings_terms_of_service_title">Terms of service</string>
    <string name="settings_privacy_policy_title">Privacy policy</string>
    <string name="settings_version_title">Version</string>


    <!-- placeholders -->
    <string name="placeholder_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam nibh. Nunc varius facilisis eros. Sed erat. In in velit quis arcu ornare laoreet.</string>
    <string name="placeholder_text_scene_1">SCENE&#xA0;1</string>
    <string name="placeholder_text_7_sec">7 SEC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="placeholder_hello_guest">Hello Guest</string>
    <string name="placeholder_join_now">join now</string>
    <string name="placeholder_story_title">Clip title</string>
    <string name="placeholder_reset_title">Recreate Clip</string>
    <string name="placeholder_delete_title">Delete</string>
    <string name="placeholder_story_remakes_count">#667</string>

    <!-- debug -->
    <string name="debug_unimplemented_title">Unimplemented</string>
    <string name="debug_unimplemented_description">This feature is still under construction. Try again in a later version.</string>
    <string name="debug_ok">OK</string>

    <string name="debug_exported_db_title">Exported db</string>
    <string name="debug_exported_db_description">Copied the model database file to the documents shared folder on the device.</string>

    <string name="debug_exported_db_failed_title">Failed exporting db</string>
    <string name="debug_exported_db_failed_description">Failed exporting the db. Check logs for exception.</string>

    <string name="scene_scene">SCENE</string>
    <string name="scene_seconds">SEC</string>

</resources>
