<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <PreferenceCategory android:title="@string/settings_category_developer">
        <Preference android:key="settings_export_db"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/settings_export_db_title" />

    </PreferenceCategory>
    -->

    <PreferenceCategory android:title="@string/settings_category_privacy">

        <CheckBoxPreference
            android:key="settings_remakes_are_public"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/settings_remakes_are_public_title"
            android:summary="@string/settings_remakes_are_public_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_category_support">

        <Preference android:key="settings_feedback"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/settings_feedback_title" />

        <Preference android:key="settings_terms_of_service"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/settings_terms_of_service_title" />

        <Preference android:key="settings_privacy_policy"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/settings_privacy_policy_title" />

        <Preference android:key="settings_version_title"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/settings_version_title"
            android:summary="0.7.0"
            />

    </PreferenceCategory>

</PreferenceScreen>