<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawer_bg"
    >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/uc"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mail"
            />

        <EditText android:id="@+id/loginMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            />

        <EditText android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_action_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            style="@style/actionButton"
            android:drawableLeft="@drawable/icon_got_it"
            android:drawablePadding="20dp" />

        <Button android:id="@+id/loginCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textButton"
            android:text="@string/login_cancel_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:drawablePadding="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="7dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/login_disclaimer_first_row"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11dp"
            android:text="@string/login_disclaimer_second_row"
            android:gravity="center"
            />

    </LinearLayout>

</RelativeLayout>